6921922: fix for 6911204 breaks tagged stack interpreter

Reviewed-by: kvn